<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/genre_relative_layout"
    tools:context=".IndieActivity">

    <ImageView
        android:id="@+id/lagwagon_iv"
        style="@style/genre_image_view"
        android:contentDescription="@string/lagwagon_iv"
        android:src="@drawable/lagwagon_indie" />

    <TextView
        android:id="@+id/lagwagon_artist_tv"
        style="@style/genre_tv_top"
        android:layout_toEndOf="@id/lagwagon_iv"
        android:layout_toRightOf="@id/lagwagon_iv"
        android:text="@string/lagwagon" />

    <TextView
        android:id="@+id/lagwagon_album_tv"
        style="@style/genre_tv_bottom"
        android:layout_below="@id/lagwagon_artist_tv"
        android:layout_toEndOf="@id/lagwagon_iv"
        android:layout_toRightOf="@id/lagwagon_iv"
        android:text="@string/lagwagon_album" />

    <ImageView
        android:id="@+id/indie_play_button"
        style="@style/PlayButton"
        android:contentDescription="@string/play_button"
        android:src="@mipmap/play_button" />

    <ImageView
        android:id="@+id/indie_pause_button"
        style="@style/PauseButton"
        android:contentDescription="@string/pause_button"
        android:src="@mipmap/pause_button" />


</RelativeLayout>